--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THing</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Flexbox</title>
+    </head>
     <body>
-    <div class="parent parent-intro">
-        </div class="child child-1"> auhdausdhaiudhasidhahihdahudasiudh</div>
-
-        </div class="child child-1"> auhdausdhaiudhasidhahihdahudasiudh</div>
-
-        </div class="child child-1"> auhdausdhaiudhasidhahihdahudasiudh</div>
-    </div>
-    <br/>
-    <div class="parentspacing-1"></div>
-        <div class="childclass1">asds</div>
-        <div class="childclass1">dsd</div>
-        <div class="childclass1">sds</div>
-    </div>
-</body>
-    
-
+        <!-- example 1: default flexbox -->
+        <div class="parent-intro">
+            <div class="child-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, reiciendis eligendi fuga deleniti eius nisi, facilis pariatur vero ab doloribus quo iste? Adipisci, vitae! Esse maiores voluptate ratione est enim?</div>
+            <div class="child-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, reiciendis eligendi fuga deleniti eius nisi, facilis pariatur vero ab doloribus quo iste? Adipisci, vitae! Esse maiores voluptate ratione est enim?</div>
+            <div class="child-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, reiciendis eligendi fuga deleniti eius nisi, facilis pariatur vero ab doloribus quo iste? Adipisci, vitae! Esse maiores voluptate ratione est enim?</div>
+        </div>
+        <br/>
+        <div class="parent-spacing">
+            <div class="chhild-1">Testing</div>
+            <div class="chhild-2">Testing</div>
+            <div class="chhild-3">Testing</div>
+        </div>
+        <br/>
+        <div class="parent-flexconstants">
+            <div class="cchild-1">Testing</div>
+            <div class="cchild-2">Testing</div>
+        </div>
     </body>
 </html>
+ 
