--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
         <title>Flexbox</title>
     </head>
     <body>
-        <!-- example 1: default flexbox -->
+        <div><h1 class="title">what the sigma</h1></div>
+
         <div class="parent-intro">
-            <div class="child-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, reiciendis eligendi fuga deleniti eius nisi, facilis pariatur vero ab doloribus quo iste? Adipisci, vitae! Esse maiores voluptate ratione est enim?</div>
-            <div class="child-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, reiciendis eligendi fuga deleniti eius nisi, facilis pariatur vero ab doloribus quo iste? Adipisci, vitae! Esse maiores voluptate ratione est enim?</div>
-            <div class="child-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, reiciendis eligendi fuga deleniti eius nisi, facilis pariatur vero ab doloribus quo iste? Adipisci, vitae! Esse maiores voluptate ratione est enim?</div>
+            <div class="child-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, reiciendis eligendi fuga deleniti eius nisi, facilis pariatur vero ab doloribus quo iste? Adipisci, vitae! Esse maiores voluptate ratione est enim?
+                <img src="https://i1.sndcdn.com/artworks-nqnA6phBdh1511jl-K4hFtg-t500x500.jpg" alt="s">
+            </div>
+            <div class="child-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, reiciendis eligendi fuga deleniti eius nisi, facilis pariatur vero ab doloribus quo iste? Adipisci, vitae! Esse maiores voluptate ratione est enim?
+                <img src="https://i1.sndcdn.com/artworks-nqnA6phBdh1511jl-K4hFtg-t500x500.jpg" alt="d">
+            </div>
+            <div class="child-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, reiciendis eligendi fuga deleniti eius nisi, facilis pariatur vero ab doloribus quo iste? Adipisci, vitae! Esse maiores voluptate ratione est enim?
+                <img src="https://i1.sndcdn.com/artworks-nqnA6phBdh1511jl-K4hFtg-t500x500.jpg" alt="a">
+            </div>
         </div>
         <br/>
         <div class="parent-spacing">
-            <div class="chhild-1">Testing</div>
-            <div class="chhild-2">Testing</div>
-            <div class="chhild-3">Testing</div>
+            <div class="chhild-1">Testingfdas</div>
+            <div class="chhild-2">Testingads</div>
+            <div class="chhild-3">Testinssddsg</div>
         </div>
         <br/>
         <div class="parent-flexconstants">
