--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Irrevelant and Forgotten Pokémon</title>
 </head>
     <body>
@@ -19,12 +22,25 @@
                 <h2>No. 0346</h2>
             </div>
             <div class="card">
+                <h2>Huntail</h2>
+                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0367_000_mf_n_00000000_f_n.png" alt="d" class="img">
+                <h2>No. 0367</h2>
+            </div>
+            <div class="card">
                 <h2>Gorebyss</h2>
                 <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0368_000_mf_n_00000000_f_n.png" alt="d" class="img">
                 <h2>No. 0368</h2>
             </div>
-        </div>
-        <div class="cards">
+            <div class="card">
+                <h2>Wormadam</h2>
+                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0413_002_fo_n_00000000_f_n.png" alt="d" class="img">
+                <h2>No. 0413</h2>
+            </div>
+            <div class="card">
+                <h2>Chingling</h2>
+                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0433_000_mf_n_00000000_f_n.png" alt="d" class="img">
+                <h2>No. 0433</h2>
+            </div>
             <div class="card">
                 <h2>Tranquill</h2>
                 <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0520_000_mf_n_00000000_f_n.png" alt="d" class="img">
@@ -36,12 +52,20 @@
                 <h2>No. 0565</h2>
             </div>
             <div class="card">
+                <h2>Klang</h2>
+                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0600_000_uk_n_00000000_f_n.png" alt="d" class="img">
+                <h2>No. 0600</h2>
+            </div>
+            <div class="card">
                 <h2>Aromatisse</h2>
                 <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0683_000_mf_n_00000000_f_n.png" alt="d" class="img">
                 <h2>No. 0683</h2>
             </div>
-        </div>
-        <div class="cards">
+            <div class="card">
+                <h2>Binacle</h2>
+                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0688_000_mf_n_00000000_f_n.png" alt="d" class="img">
+                <h2>No. 0688</h2>
+            </div>
             <div class="card">
                 <h2>Morelull</h2>
                 <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0755_000_mf_n_00000000_f_n.png" alt="d" class="img">
@@ -53,51 +77,20 @@
                 <h2>No. 0852</h2>
             </div>
             <div class="card">
-                <h2>Dolliv</h2>
-                <img src="https://assets.pokeos.com/pokemon/home/render/929.png" alt="d" class="img">
-                <h2>No. 0929</h2>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="card">
-                <h2>Morelull</h2>
-                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0755_000_mf_n_00000000_f_n.png" alt="d" class="img">
-                <h2>No. 0755</h2>
+                <h2>Pincurchin</h2>
+                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0871_000_mf_n_00000000_f_n.png" alt="d" class="img">
+                <h2>No. 0871</h2>
             </div>
             <div class="card">
-                <h2>Clobbopus</h2>
-                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0852_000_mf_n_00000000_f_n.png" alt="d" class="img">
-                <h2>No. 0852</h2>
+                <h2>Arctovish</h2>
+                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0883_000_uk_n_00000000_f_n.png" alt="d" class="img">
+                <h2>No. 0883</h2>
             </div>
             <div class="card">
                 <h2>Dolliv</h2>
                 <img src="https://assets.pokeos.com/pokemon/home/render/929.png" alt="d" class="img">
-                <h2>No. 0929</h2>
+                <h2>No. 929</h2>
             </div>
-        </div>
-        <div class="cards">
-            <div class="card">
-                <h2>Morelull</h2>
-                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0755_000_mf_n_00000000_f_n.png" alt="d" class="img">
-                <h2>No. 0755</h2>
-            </div>
-            <div class="card">
-                <h2>Clobbopus</h2>
-                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0852_000_mf_n_00000000_f_n.png" alt="d" class="img">
-                <h2>No. 0852</h2>
-            </div>
-            <div class="card">
-                <h2>Dolliv</h2>
-                <img src="https://assets.pokeos.com/pokemon/home/render/929.png" alt="d" class="img">
-                <h2>No. 0929</h2>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="card">
-                <h2>Morelull</h2>
-                <img src="https://projectpokemon.org/images/sprites-models/homeimg/poke_capture_0755_000_mf_n_00000000_f_n.png" alt="d" class="img">
-                <h2>No. 0755</h2>
-            </div>
-        </div>
+         </div>    
     </body>
 </html>
